<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ChooseExtruderTemp</class>
 <widget class="QWidget" name="ChooseExtruderTemp">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1280</width>
    <height>720</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QQuickWidget" name="qw_Temp200">
   <property name="geometry">
    <rect>
     <x>549</x>
     <y>168</y>
     <width>180</width>
     <height>180</height>
    </rect>
   </property>
   <property name="resizeMode">
    <enum>QQuickWidget::SizeRootObjectToView</enum>
   </property>
   <property name="source">
    <url>
     <string>qrc:/qml/TempButton.qml</string>
    </url>
   </property>
  </widget>
  <widget class="QQuickWidget" name="qw_Temp180">
   <property name="geometry">
    <rect>
     <x>312</x>
     <y>168</y>
     <width>180</width>
     <height>180</height>
    </rect>
   </property>
   <property name="resizeMode">
    <enum>QQuickWidget::SizeRootObjectToView</enum>
   </property>
   <property name="source">
    <url>
     <string>qrc:/qml/TempButton.qml</string>
    </url>
   </property>
  </widget>
  <widget class="QQuickWidget" name="qw_Temp220">
   <property name="geometry">
    <rect>
     <x>788</x>
     <y>168</y>
     <width>180</width>
     <height>180</height>
    </rect>
   </property>
   <property name="resizeMode">
    <enum>QQuickWidget::SizeRootObjectToView</enum>
   </property>
   <property name="source">
    <url>
     <string>qrc:/qml/TempButton.qml</string>
    </url>
   </property>
  </widget>
  <widget class="QQuickWidget" name="qw_Temp240">
   <property name="geometry">
    <rect>
     <x>312</x>
     <y>420</y>
     <width>180</width>
     <height>180</height>
    </rect>
   </property>
   <property name="resizeMode">
    <enum>QQuickWidget::SizeRootObjectToView</enum>
   </property>
   <property name="source">
    <url>
     <string>qrc:/qml/TempButton.qml</string>
    </url>
   </property>
  </widget>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1280</width>
     <height>720</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>Adobe Arabic</family>
    </font>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgba(32, 32, 35, 255);</string>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
  <widget class="QQuickWidget" name="qw_Temp260">
   <property name="geometry">
    <rect>
     <x>549</x>
     <y>420</y>
     <width>180</width>
     <height>180</height>
    </rect>
   </property>
   <property name="resizeMode">
    <enum>QQuickWidget::SizeRootObjectToView</enum>
   </property>
   <property name="source">
    <url>
     <string>qrc:/qml/TempButton.qml</string>
    </url>
   </property>
  </widget>
  <widget class="QQuickWidget" name="qw_Temp280">
   <property name="geometry">
    <rect>
     <x>788</x>
     <y>420</y>
     <width>180</width>
     <height>180</height>
    </rect>
   </property>
   <property name="resizeMode">
    <enum>QQuickWidget::SizeRootObjectToView</enum>
   </property>
   <property name="source">
    <url>
     <string>qrc:/qml/TempButton.qml</string>
    </url>
   </property>
  </widget>
  <zorder>label</zorder>
  <zorder>qw_Temp180</zorder>
  <zorder>qw_Temp240</zorder>
  <zorder>qw_Temp220</zorder>
  <zorder>qw_Temp200</zorder>
  <zorder>qw_Temp260</zorder>
  <zorder>qw_Temp280</zorder>
 </widget>
 <customwidgets>
  <customwidget>
   <class>QQuickWidget</class>
   <extends>QWidget</extends>
   <header location="global">QtQuickWidgets/QQuickWidget</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
